Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/unicode/SupplementaryJavaID2.out
SupplementaryJavaID2.java:12:9: compiler.err.illegal.char: \ud801
SupplementaryJavaID2.java:12:15: compiler.err.illegal.char: \ud801
SupplementaryJavaID2.java:12:24: compiler.err.expected: token.identifier
3 errors
